# RustHypixelApi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  READNE.md  install.sh  rocket.toml
.db/: data.mdb  lock.mdb
database/: Cargo.toml
database/src/: bucket.rs  cache.rs  error.rs  expiration_queue.rs  file_handle.rs  lib.rs  partition.rs  sized_bytes.rs
ltmdb/: Cargo.toml
ltmdb/src/: bucket.rs  db.rs  error.rs  expiration_queue.rs  file_handle.rs  hasher.rs  io_uring.rs  lib.rs  partition.rs  runtime.rs  sized_bytes.rs
src/: api_handler.rs  cache.rs  cache_enum.rs  error.rs  fetch_and_cache.rs  format.rs  key_extractor.rs  logging.rs  lru_cache.rs  main.rs  moka_cache.rs  profile.rs  rate_limit.rs  rate_tracker.rs  request_utils.rs  routes.rs  secrets.rs  timer.rs  utils.rs
src/cache/: cache_enum.rs  cache_key.rs  cache_router.rs  compression.rs  database.rs  db_backed_cache.rs  expires.rs  lru_cache.rs  mod.rs  moka_cache.rs
src/cache/database/: batch_state.rs  db_entry.rs  db_handle.rs  db_message.rs  mod.rs  timed_queue.rs
src/cache/memory/: mem_cache.rs  mem_entry.rs  mod.rs
src/routes/: dungeon.rs  mod.rs  profile.rs  secrets.rs
