[package]
name = "hypixel_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0"} 
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
actix-governor = "0.8.0"
lz4_flex = { version = "0.11.5", default-features = false } # disable default for unsafe thingys. makes it like slightly faster.
uuid = { version = "1.19.0", features = ["v4", "serde"] }
futures = "0.3.31"
simd-json = "0.17.0"
mimalloc = "0.1.48"
serde = "1.0.228"
heed = "0.22.0"
tokio =  { version = "1.49.0", features = ["macros", "sync"] }
