[workspace]

[package]
name = "hypixel_api"
version = "0.1.0"
edition = "2024"

members = ["ltmdb"]

[dependencies]
actix-web = { version = "4.13.0" }
moka = { version = "0.12.15", features = ["future"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde_json = "1.0.140"
actix-governor = "0.8.0"
lz4_flex = { version = "0.13.1", default-features = false } # disable default for unsafe thingys. makes it like slightly faster.
uuid = { version = "1.23.3", features = ["v4", "serde"] }
futures = "0.3.32"
simd-json = "0.17.0"
mimalloc = "0.1.32"
serde = "1.0.228"
heed = "0.22.1"
tokio =  { version = "1.52.3", features = ["macros", "sync"] }
dashmap = { version = "6.2.1", features = ["inline" ] }
ltmdb = { path = "ltmdb" }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
