[workspace]

[package]
name = "hypixel_api"
version = "1.3.8"
edition = "2024"

members = ["ltmdb"]

[dependencies]
actix-web = { version = "4.14.0" }
moka = { version = "0.12.15", features = ["future"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.150"
actix-governor = "0.10.0"
lz4_flex = { version = "0.13.1", default-features = false } # disable default for unsafe thingys. makes it like slightly faster.
uuid = { version = "1.23.4", features = ["v4", "serde"] }
futures = "0.3.32"
simd-json = "0.17.0"
mimalloc = "0.1.52"
serde = "1.0.228"
tokio =  { version = "1.52.3", features = ["macros", "sync"] }
ltmdb = { path = "ltmdb" }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
debug-info = "true"
