[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic = "0.6.1"
bytemuck = "1.25.0"
bytes = "1.12.0"
concurrent-slotmap = "0.2.0-alpha.1"
dashmap = "6.2.1"
flume = "0.12.0"
futures = "0.3.32"
futures-timer = "3.0.4"
parking_lot = "0.12.5"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"


