[package]
name = "ltmdb"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.12.0"
concurrent-slotmap = "0.2.0-alpha.1"
crossbeam-queue = "0.3.12"
flume = "0.12.0"
futures = "0.3.32"
futures-timer = "3.0.4"
papaya = "0.2.4"
portable-atomic = "1.13.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"


