[package]
name = "ltmdb"
version = "1.1.0"
edition = "2024"

[dependencies]
bytes = "1.12.0"
crossbeam-queue = "0.3.12"
flume = "0.12.0"
futures-timer = "3.0.4"
futures-util = { version = "0.3.32", default-features = false, features = ["alloc", "async-await", "async-await-macro"] }
papaya = "0.2.4"
portable-atomic = "1.13.1"
sharded-slab = "0.1.7"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["uio"]}

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
